2009-01-19  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Finternal_set_lisp_face_attribute, Fx_list_fonts):
	Check return value of font_spec_from_name.
	(Fx_list_fonts): Doc fix.

	* font.c (font_spec_from_name): Return Qnil if font name could not
	be parsed.
	(font_parse_name): Treat a `?' character as part of an XLFD.

	* fns.c (Fsubstring): Doc fix.

2009-01-19  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_lookup_cache): Check the return value of
	FcFontList.
	(ftfont_list): Likewise.

2009-01-18  Juanma Barranquero  <lekktu@gmail.com>

	* dbusbind.c (Fdbus_register_signal):
	* process.c (conv_sockaddr_to_lisp):
	* w32fns.c (Fw32_battery_status): Use empty_unibyte_string.

	* callproc.c (Fgetenv_internal): Doc fix.

2009-01-16  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (x_make_gc): Don't allocate stipple member for gc_values;
	it is not even used.

2009-01-16  Glenn Morris  <rgm@gnu.org>

	* font.c (Ffont_variation_glyphs): Silence compiler.

2009-01-15  Juanma Barranquero  <lekktu@gmail.com>

	* sound.c (SOUND_WARNING): Use _snprintf, for MSVC compatibility.
	Reported by David Robinow <drobinow@gmail.com>.

2009-01-15  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_system): Fix handling of
	null_byte_found.

2009-01-14  Jason Rumney  <jasonr@gnu.org>

	* frame.c (x_set_font): Always store a font to the font parameter,
	never a fontset.  (Bug#1562)

2009-01-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (TWO_MORE_BYTES): New macro.
	(detect_coding_utf_16): Use TWO_MORE_BYTES instead of ONE_MORE_BYTE.

2009-01-13  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_clear_prop): If clearing the family, clear the font
	width index too.

	* xfaces.c (Finternal_set_lisp_face_attribute): Revert last change.

2009-01-12  Juanma Barranquero  <lekktu@gmail.com>

	* sound.c [WINDOWSNT] (SOUND_WARNING): New macro.
	(do_play_sound): Use it.  Don't pass a hardcoded buffer size to mci
	functions, use sizeof.
